--- a/Css/main.css
+++ b/Css/main.css
@@ -4,23 +4,33 @@
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 .nav1 {
-    background-color: rgb(253, 180, 180)
+    background-color: rgb(253, 180, 180);
 }
+
 nav {
     justify-content: center;
     align-items: center;
     display: flex;
-    padding: 15px 15%;
+    padding: 15px;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
-nav ul li {
+
+nav ul {
     list-style-type: none;
-    display: inline-block;
-    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
+
+nav ul li {
+    padding: 10px;
+}
+
 nav ul li a {
     text-decoration: none;
     font-size: larger;
@@ -29,14 +39,20 @@ nav ul li a {
     letter-spacing: 4px;
     transition-duration: .4s;
 }
+
 nav ul li a:hover {
     color: rgb(90, 250, 255);
     letter-spacing: 1px;
 }
-nav img{
+
+nav .logo img {
     height: 40px;
     width: 40px;
-    top: 100px;
-    right: 4px;
+    margin-right: 10px;
 }
 
+.center-links {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+}
